--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                         <li>完全所有权</li>
                         <li>优先支持</li>
                     </ul>
-                    <button class="cta-button" onclick="window.open('https://x.com/CaifuEth', '_blank')">X</button>
+                    <button class="cta-button" onclick="window.open('https://web3.okx.com/zh-hans/nft/collection/xlayer/okb-inscription-domain-name', '_blank')">X</button>
                 </div>
                 <div class="pricing-card" style="transform: scale(1.05); background: rgba(0, 209, 255, 0.1);">
                     <h3>3D</h3>
@@ -654,7 +654,7 @@
                         <li>完全所有权</li>
                         <li>优先支持</li>
                     </ul>
-                    <button class="cta-button" onclick="window.open('https://x.com/CaifuEth', '_blank')" style="background: linear-gradient(45deg, var(--highlight), #00a2ff);">X</button>
+                    <button class="cta-button" onclick="window.open('https://web3.okx.com/zh-hans/nft/collection/xlayer/okb-inscription-domain-name', '_blank')" style="background: linear-gradient(45deg, var(--highlight), #00a2ff);">X</button>
                 </div>
                 <div class="pricing-card">
                     <h3>单词</h3>
@@ -664,7 +664,7 @@
                         <li>完全所有权</li>
                         <li>优先支持</li>
                     </ul>
-                    <button class="cta-button" onclick="window.open('https://x.com/CaifuEth', '_blank')">X</button>
+                    <button class="cta-button" onclick="window.open('https://web3.okx.com/zh-hans/nft/collection/xlayer/okb-inscription-domain-name', '_blank')">X</button>
                 </div>
             </div>
         </div>
